Fix layout issues and colour persistance

--- a/src/styles/Attempt.module.css
+++ b/src/styles/Attempt.module.css
@@ -1,5 +1,7 @@
 .attempt {
     display: flex;
-    justify-content: center;
+    justify-content: left;
     gap: 0.25rem;
+    border: 1px solid black;
+    padding: 0.5rem;
 }
