--- a/src/styles/CurrentAttempt.module.css
+++ b/src/styles/CurrentAttempt.module.css
@@ -1,5 +1,3 @@
 .word {
-    border: 1px solid black;
-    padding: 0.5rem;
-    margin: 0.5rem;
+    margin: 0.5rem 0;
 }
